--- a/package.json
+++ b/package.json
@@ -18,20 +18,23 @@
     "@expo/vector-icons": "^14.0.2",
     "@mui/material": "^6.4.2",
     "@react-navigation/native": "^7.0.14",
+    "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "expo": "~52.0.28",
     "expo-font": "~13.0.3",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.21",
+    "expo-sqlite": "^15.1.2",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13"
