--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@expo/vector-icons": "^14.0.2",
     "@mui/material": "^6.4.2",
     "@react-navigation/native": "^7.0.14",
-    "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "expo": "~52.0.28",
     "expo-font": "~13.0.3",
+    "expo-image-manipulator": "~13.0.6",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
@@ -32,15 +33,17 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-canvas": "^0.1.40",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.5",
     "zustand": "^5.0.3",
-    "expo-image-picker": "~16.0.6",
-    "expo-image-manipulator": "~13.0.6"
+    "expo-asset": "~11.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
